--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-# Journal | Skit Book Club
+**Skit Book Club**
+                           Journal
 
 !!! WARNING
     This page is work in progress.
