--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/journal.css">
+</head>
+
 **Skit Book Club**
                            Journal
 
