--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/journal.css">
+  <link rel="stylesheet" href="https://morgan3d.github.io/markdeep/latest/journal.css">
 </head>
 
 **Skit Book Club**
