--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 **Skit Book Club**
                            Journal
 
-!!! WARNING
-    This page is work in progress.
+This is the public journal of [Skit's](https://skit.ai/) Book Club.
+
+# 21st February, 2022
+
+!!!
+    Participants: @deb, @unnu, and @lepisma
+
+...
+
 
 <script>markdeepOptions={tocStyle:'long'};</script>
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
