--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ This is the public journal of [Skit's](https://skit.ai/) Book Club.
 !!!
     Participants: @deb, @unnu, and @lepisma
 
-...
+No books discussed today. We decided to go with a public journal and have more structured roles for LRAs.
 
 
 <script>markdeepOptions={tocStyle:'long'};</script>
