--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 **Skit Book Club**
                            Journal
 
-This is the public journal of [Skit's](https://skit.ai/) Book Club.
+This is the public journal of [Skit's](https://skit.ai/) Book Club. While SBC was started in January 2022, we have had many older book clubs at Skit, one of whose archive can be found [here](https://skit-ai.github.io/several-people-are-talking/).
+
+In this journal we maintain list of items, and possibly notes, that are discussed in our weekly meetings[^1].
+
+*You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
 # 21st February, 2022
 
@@ -14,6 +18,7 @@ This is the public journal of [Skit's](https://skit.ai/) Book Club.
 
 No books discussed today. We decided to go with a public journal and have more structured roles for LRAs.
 
+[^1]: More structure will come as we take these meetings forward.
 
 <script>markdeepOptions={tocStyle:'long'};</script>
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
