--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 **Skit Book Club**
                            Journal
 
-This is the public journal of [Skit's](https://skit.ai/) Book Club. While SBC was started in January 2022, we have had many older book clubs at Skit, one of whose archive can be found [here](https://skit-ai.github.io/several-people-are-talking/).
+This is the public journal of [Skit's](https://skit.ai/) Book Club (SBC). While SBC was started in January 2022, we have had many older book clubs at Skit. One of them is archived [here](https://skit-ai.github.io/several-people-are-talking/).
 
 In this journal we maintain list of items, and possibly notes, that are discussed in our weekly meetings[^1].
 
