--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 *You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
+# 28th February, 2022
+
+No books discussed today.
+
 # 21st February, 2022
 
 !!!
