Log from 9th March, 2022

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 *You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
+# 9th March, 2022
+
+!!!
+    Participants: @deb, @vinay, @shaunak, @unnu, and @lepisma
+
+We decided to have these roles for LRAs (Let's Read Along sessions):
+
+1. The Scribe. This person takes the responsibility of writing notes on this journal.
+1. Private Investigator. Finds out about the author, what are their motivations and other works, etc.
+1. The Scout. Finds next book(s) for LRA and pitches to the group.
+1. _Fan-Fiction Writer_.
+1. _Hacker_. Secondary sources crawler.
+1. _Anchor_. Summarizes the book and intiates the conversation[^2].
+
+Next week we are going to have a regular BYOB (Bring Your Own Book).
+
 # 28th February, 2022
 
 No books discussed today.
@@ -23,6 +39,7 @@ No books discussed today.
 No books discussed today. We decided to go with a public journal and have more structured roles for LRAs.
 
 [^1]: More structure will come as we take these meetings forward.
+[^2]: _Italicized_ names are not finalized.
 
 <script>markdeepOptions={tocStyle:'long'};</script>
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
