--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 *You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
+# 16th March, 2022
+
+!!!
+    Participants: @deb, @shaunak, @unnu, @lepisma, and @manas
+
+We did a _Bring You Own Book_ (BYOB) today.
+
+TBD. To add items here.
+
 # 9th March, 2022
 
 !!!
