--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 !!!
     Participants: @deb, @shaunak, @unnu, @lepisma, and @manas
 
-We did a _Bring You Own Book_ (BYOB) today.
+We did a _Bring Your Own Book_ (BYOB) today.
 
 TBD. To add items here.
 
