--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 We did a _Bring Your Own Book_ (BYOB) today.
 
-TBD. To add items here.
+## @lepisma
+- Finished [Thinking in Systems](https://www.goodreads.com/book/show/3828902-thinking-in-systems)
+- Starting [How to Read a Book](https://www.goodreads.com/book/show/567610.How_to_Read_a_Book)
+- Reading few stories from [Russian Fairy Tales](https://www.amazon.in/Russian-Fairy-Tales-Alexander-Afanasyev/dp/1908478683)
+
+## @manas
+- Started [The Lonely City](https://www.goodreads.com/book/show/25667449-the-lonely-city)
+
+## @unnu
+- [The Fall of Kabul (2021)](https://en.wikipedia.org/wiki/Fall_of_Kabul_(2021))
 
 # 9th March, 2022
 
