--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 *You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
+# 23rd March, 2022
+
+!!!
+    Participants: @shaunak, @advait, @lepisma, @sanchit, and @manas
+
+Another BYOB today.
+
+## @sanchit
+- [The House in the Cerulean Sea](https://www.goodreads.com/book/show/45047384-the-house-in-the-cerulean-sea)
+
+## @shaunak
+- [Articles of Faith](https://global.oup.com/academic/product/articles-of-faith-9780199489367?cc=us&lang=en&)
+
+## @advait
+- [The Power Law](https://www.amazon.com/Power-Law-Venture-Capital-Making/dp/052555999X)
+
+## @lepisma
+- [How to Read a Book](https://www.goodreads.com/book/show/567610.How_to_Read_a_Book)
+
 # 16th March, 2022
 
 !!!
