--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 
 *You can edit this journal [here](https://github.com/skit-ai/sbc/edit/main/index.html)*
 
+# 20th April, 2022
+
+!!!
+    Participants: @shaunak, @lepisma, @sanchit, @vinay, @himansu, and @tanvi
+
+## @himansu
+- Reading [Venture Deals](https://www.goodreads.com/book/show/58873778-venture-deals-4th-edition)
+- Finished [India that is Bharat](https://www.goodreads.com/en/book/show/58508534-india-that-is-bharat)
+
+## @sanchit
+- ...
+
+## @vinay
+- Reading [Why we Sleep](https://www.goodreads.com/book/show/34466963-why-we-sleep)
+
+## @tanvi
+- Reading Chanakya Niti.
+
+## @shaunak
+- ...
+
+## @lepisma
+
+- Finished [To Kill a Mockingbird](https://www.goodreads.com/book/show/2657.To_Kill_a_Mockingbird)
+- Reading [A Thousand Brains](https://www.goodreads.com/en/book/show/54503521-a-thousand-brains)
+
+
+
 # 23rd March, 2022
 
 !!!
