--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 - Reading [Why we Sleep](https://www.goodreads.com/book/show/34466963-why-we-sleep)
 
 ## @tanvi
-- Reading Chanakya Niti.
+- Reading [Chanakya Niti] (https://www.goodreads.com/book/show/49246644-chanakya-neeti)
+- Re-reading [Naval's Almanack] (https://www.goodreads.com/en/book/show/54898389)
 
 ## @shaunak
 - ...
