--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 - Finished [India that is Bharat](https://www.goodreads.com/en/book/show/58508534-india-that-is-bharat)
 
 ## @sanchit
-- ...
+- [Orlando](https://www.goodreads.com/book/show/18839.Orlando)
+- [The posthumous memoirs of Bras Cubas](https://www.goodreads.com/book/show/87264.Mem_rias_P_stumas_de_Br_s_Cubas)
 
 ## @vinay
 - Reading [Why we Sleep](https://www.goodreads.com/book/show/34466963-why-we-sleep)
@@ -31,14 +32,12 @@ In this journal we maintain list of items, and possibly notes, that are discusse
 - Re-reading [Naval's Almanack](https://www.goodreads.com/en/book/show/54898389)
 
 ## @shaunak
-- ...
+- [Moon Knight (2014) #1-6](https://www.goodreads.com/book/show/20898006-moon-knight-vol-1) by Warren Ellis
+- [Moon Knight (2016)](https://www.goodreads.com/en/book/show/39716517-moon-knight-by-lemire-smallwood) by Jeff Lemire & Greg Smallwood (the entire run is great this link doesn't collect all issues. I recommend the whole run).
 
 ## @lepisma
-
 - Finished [To Kill a Mockingbird](https://www.goodreads.com/book/show/2657.To_Kill_a_Mockingbird)
 - Reading [A Thousand Brains](https://www.goodreads.com/en/book/show/54503521-a-thousand-brains)
-
-
 
 # 23rd March, 2022
 
